--- a/css/style.css
+++ b/css/style.css
@@ -30,18 +30,26 @@
   align-items: center;
 }
 .right-col button{
-  border: 1px solid transparent;
   background: #E02C6D;
+  border: none;
   padding: 10px 24px;
   border-radius: 3px;
   font-size: 30px;
   color: #fff;
  cursor: pointer;
+ box-shadow: inset 0 0 0 0 #f9e506;
+ transition: ease-out 0.3s;
+ outline: none;
 }
-.right-col button img{
+.right-col button:hover{
+  box-shadow: inset 160px 0 0 0 #43fbf2;
+  color: #000;
+}
+.right-col button .fas{
   width: 25px;
-  
+  height: 5px;
 }
+  
 /* ----HEADER SECTION---- */
 .content{
   display: flex;
@@ -66,10 +74,32 @@
  color: #fff;
  background: #E02C6D;
  font-size: 20px;
- border: 1px solid transparent;
+ border: 3px solid #2d25a0;
  border-radius: 3px;
  cursor: pointer;
- 
+ position: relative;
+ z-index: 1;
+}
+.left-col-1 button:hover{
+  color: #000;
+}
+.left-col-1 button::before{
+  transition: 0.5s all ease;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  right: 50%;
+  bottom: 0;
+  opacity: 0;
+  content: '';
+  background-color: #2d25a0;
+}
+.left-col-1 button:hover::before{
+  transition: 0.5s all ease;
+  left: 0;
+  right: 0;
+  opacity: 1;
+  z-index: -1;
 }
 .left-col-1 button .fas{
   margin-left: 5px;
@@ -77,8 +107,17 @@
 .right-col-1 img{
   width: 556px;
   height: 438px;
-
+  cursor: pointer;
+  transition: all 1.3s linear;
 }
+.right-col-1 figure{
+  height: 438px;
+  overflow: hidden;
+}
+.right-col-1 img:hover{
+ transform: scale(1.3);
+}
+
 /* ----main section---- */
 
 .section-body{
